src/objects/GE_File_Column_Override_Info__c.object
<CustomObject>
    <description>Contains information related to overriding any of the column value from its actual value.</description>
    <fields>
        <fullName>Actual_Column_Value__c</fullName>
        <description>Contains actual column value from the BP database</description>
        <inlineHelpText>Contains actual column value from the BP database</inlineHelpText>
        <label>Actual Column Value</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_File_Detail__c</fullName>
        <description>Parent object GE_File_Detail__c</description>
        <label>GE File Detail</label>
        <referenceTo>GE_File_Detail__c</referenceTo>
        <relationshipLabel>GE File Columns Override Info</relationshipLabel>
        <relationshipName>GE_File_Columns_Override_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GE_File_Column_Override_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Override_Column_Value__c</fullName>
        <description>Contains column value to be shown in export file for the defined actual value</description>
        <inlineHelpText>Contains column value to be shown in export file for the defined actual value</inlineHelpText>
        <label>Override Column Value</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <label>GE File Column Override Info</label>
    <nameField>
        <displayFormat>FCO-{00000000}</displayFormat>
        <label>GE File Column Override Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GE File Columns Override Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>